--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.3",
     "fs-extra": "^9.0.1",
-    "hardhat": "^2.2.0",
+    "hardhat": "^2.5.0",
     "hardhat-gas-reporter": "^1.0.4",
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
@@ -72,6 +72,7 @@
     "prettier": "prettier --config .prettierrc --write \"**/*.{js,json,md,sol,ts}\"",
     "prettier:list-different": "prettier --config .prettierrc --list-different \"**/*.{js,json,md,sol,ts}\"",
     "test": "hardhat test",
+    "hardhat": "hardhat",
     "typechain": "hardhat typechain"
   }
 }
