--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "xToken management contracts",
   "version": "1.0.0",
   "dependencies": {
+    "@chainlink/contracts": "^0.2.1",
     "@openzeppelin/contracts": "^4.1.0",
     "@openzeppelin/contracts-upgradeable": "^4.1.0",
     "axios": "^0.21.1"
